--- a/myntra-react-clone/src/index.css
+++ b/myntra-react-clone/src/index.css
@@ -408,8 +408,8 @@ a.action_container:link {
   cursor: pointer;
 }
 
-.spinner {
-  margin: 10% 0;
+.loader {
+  margin: 10% 40%;
 }
 
 .search_bar {
